Выполнил 3-е задание, исправил замечания.

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -37,6 +37,6 @@
     justify-content: flex-end
 .title
     text-align: center
-    padding: 1rem 0
+    padding-bottom: 1rem
 .navbar-brand
     color: #ffffff !important
