--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,7 @@
 
 .title {
   text-align: center;
-  padding: 1rem 0; }
+  padding-bottom: 1rem; }
 
 .navbar-brand {
   color: #ffffff !important; }
