Переделал меню. Добавил страницу добавления новостей(без функционала)

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -38,3 +38,8 @@
     padding-bottom: 1rem
 .navbar-brand
     color: #ffffff !important
+.category-box
+    border: 1px solid lightgray
+    min-width: 20vw
+    border-radius: 0.25rem
+    margin: 0 0.5rem
