--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,4 +40,10 @@
 .navbar-brand {
   color: #ffffff !important; }
 
+.category-box {
+  border: 1px solid lightgray;
+  min-width: 20vw;
+  border-radius: 0.25rem;
+  margin: 0 0.5rem; }
+
 /*# sourceMappingURL=style.css.map */
