Выполнил все задания 5-го урока.

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -54,3 +54,25 @@
 option:hover
     background-color: lightgray
 
+.news-card
+    max-width: 40%
+
+.card-image
+    padding: 1rem
+.card-footer
+    display: flex
+    justify-content: space-between
+.card-links
+    display: flex
+    align-items: center
+    & div
+        display: flex
+        flex-direction: column
+        & .text-muted
+            text-align: center
+            line-height: 80%
+
+.card-links i
+    color: lightgray
+    padding: 0 0.25rem
+
