Селал 1-ое и 2-ое задание. Работаю над 3-им

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,4 +80,14 @@ option:hover {
   color: lightgray;
   padding: 0 0.25rem; }
 
+.page-link {
+  color: grey; }
+  .page-link:focus {
+    outline: none;
+    box-shadow: none; }
+
+.page-item.active .page-link {
+  background-color: grey;
+  border-color: grey; }
+
 /*# sourceMappingURL=style.css.map */
