--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -75,4 +75,11 @@ option:hover
 .card-links i
     color: lightgray
     padding: 0 0.25rem
-
+.page-link
+    color: grey
+    &:focus
+        outline: none
+        box-shadow: none
+.page-item.active .page-link
+    background-color: grey
+    border-color: grey
