Сделал CRUD новостей и категорий

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -48,8 +48,9 @@
 .dropdown-item:active
     background-color: gray
 
-.form-control:focus
-    box-shadow: none
+//.form-control:focus,
+//.custom-file-input:focus .custom-file-label
+// box-shadow: none
 
 option:hover
     background-color: lightgray
