--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -84,3 +84,5 @@ option:hover
 .page-item.active .page-link
     background-color: grey
     border-color: grey
+.invalid-feedback
+    display: block
