Выполнил все задания

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -86,3 +86,8 @@ option:hover
     border-color: grey
 .invalid-feedback
     display: block
+
+.profile-image
+    min-width: 50%
+    border-radius: 50%
+    margin-bottom: 0.5rem
