--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,4 +90,9 @@ option:hover {
 .invalid-feedback {
   display: block; }
 
+.profile-image {
+  min-width: 50%;
+  border-radius: 50%;
+  margin-bottom: 0.5rem; }
+
 /*# sourceMappingURL=style.css.map */
