--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,4 +95,7 @@ option:hover {
   border-radius: 50%;
   margin-bottom: 0.5rem; }
 
+.avatar {
+  max-width: 200px; }
+
 /*# sourceMappingURL=style.css.map */
