--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -93,3 +93,15 @@ option:hover
     margin-bottom: 0.5rem
 .avatar
     max-width: 200px
+
+.card
+    transition: all 0.2s
+.last-news
+    color: inherit
+    &:hover .card
+        border-color: #1b1e21 !important
+    &:hover
+        text-decoration: none
+        color: inherit
+
+
