Добавил блок комментариев.

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -17,27 +17,34 @@
     border-top: 1px solid #dee2e6
     margin-top: auto
     padding: 0.5rem 0
+
     &__box
         display: flex
         justify-content: space-between
+
     &__social
         a
             color: gray
             padding: 0.25rem
             transition: color 0.2s
+
         a:hover
             color: darkgray
 
 
 .nav
     justify-content: center
+
 .navbar-collapse
     justify-content: flex-end
+
 .title
     text-align: center
     padding-bottom: 1rem
+
 .navbar-brand
     color: #ffffff !important
+
 .category-box
     border: 1px solid lightgray
     min-width: 20vw
@@ -60,15 +67,19 @@ option:hover
 
 .card-image
     padding: 1rem
+
 .card-footer
     display: flex
     justify-content: space-between
+
 .card-links
     display: flex
     align-items: center
+
     & div
         display: flex
         flex-direction: column
+
         & .text-muted
             text-align: center
             line-height: 80%
@@ -76,14 +87,18 @@ option:hover
 .card-links i
     color: lightgray
     padding: 0 0.25rem
+
 .page-link
     color: grey
+
     &:focus
         outline: none
         box-shadow: none
+
 .page-item.active .page-link
     background-color: grey
     border-color: grey
+
 .invalid-feedback
     display: block
 
@@ -91,17 +106,26 @@ option:hover
     min-width: 50%
     border-radius: 50%
     margin-bottom: 0.5rem
+
 .avatar
     max-width: 200px
 
 .card
     transition: all 0.2s
+
 .last-news
     color: inherit
+
     &:hover .card
         border-color: #1b1e21 !important
+
     &:hover
         text-decoration: none
         color: inherit
 
 
+
+.children
+    padding-left: 1rem
+    border-left: 1px solid lightgray
+    margin-bottom: 1rem
