--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,4 +109,9 @@ option:hover {
     text-decoration: none;
     color: inherit; }
 
+.children {
+  padding-left: 1rem;
+  border-left: 1px solid lightgray;
+  margin-bottom: 1rem; }
+
 /*# sourceMappingURL=style.css.map */
