--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -129,3 +129,12 @@ option:hover
     padding-left: 1rem
     border-left: 1px solid lightgray
     margin-bottom: 1rem
+
+.close-btn
+    padding: 0.35rem !important
+
+.card-header-reply-input
+    display: flex
+    justify-content: space-between
+    align-items: center
+
