--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,6 +99,10 @@ option:hover {
   max-width: 200px; }
 
 .card {
+  transition: all 0.2s;
+  overflow: hidden; }
+
+.card-img-bottom {
   transition: all 0.2s; }
 
 .last-news {
@@ -108,6 +112,8 @@ option:hover {
   .last-news:hover {
     text-decoration: none;
     color: inherit; }
+  .last-news:hover .card-img-bottom {
+    transform: scale(1.05); }
 
 .children {
   padding-left: 1rem;
